kubernetes/accumulo-gc-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: accumulo-gc
  name: accumulo-gc
spec:
  replicas: 1 
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: accumulo-gc
    spec:
      containers:
      - args:
        - gc
        image: quay.io/geodocker/accumulo-geomesa:latest
        name: accumulo-gc
        resources: {}
      restartPolicy: Always
status: {}
