kubernetes/accumulo-master-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: accumulo-master
  name: accumulo-master
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: accumulo-master
    spec:
      containers:
      - args:
        - master
        - --auto-init
        image: quay.io/geodocker/accumulo-geomesa:latest
        name: accumulo-master
        resources: {}
      restartPolicy: Always
status: {}
