kubernetes/accumulo-tserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: accumulo-tserver
  name: accumulo-tserver
spec:
  replicas: 1 
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: accumulo-tserver
    spec:
      containers:
      - args:
        - tserver
        image: quay.io/geodocker/accumulo-geomesa:latest
        name: accumulo-tserver
        resources: {}
        volumeMounts:
        - mountPath: /opt/accumulo/lib/ext
          name: tserver-data-volume
      restartPolicy: Always
      volumes:
      - name: tserver-data-volume
        persistentVolumeClaim:
          claimName: tserver-data-volume
status: {}
