kubernetes/accumulo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: accumulo 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /accumulo
        backend:
          serviceName: accumulo-monitor
          servicePort: 50095
