kubernetes/geoserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geoserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /geoserver
        backend:
          serviceName: geoserver
          servicePort: 9090
